SpinBox: Reset activeSubControls when neither of indicators are active

Otherwise, an indicator remains in an active state even after being
released and unhovered.

BUG: 459004